--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,14 +22,29 @@
 
     <h3>Our Vision</h3>
     <p>   
-    We see ourselves as only one of Michiana's great churches serving a great God in great cities. Through His people God spreads His message of salvation and love in Jesus Christ to a needy world. We are evangelical and rely on the Holy Spirit's empowering to engage in other's lives both locally and globally. 
+    To provide you with high quality lodging that enhances your vacation time.
     </p>
     
-    <h3>Our Mission</h3>
+    <h3>Your Vacation</h3>
     <p>
-    We are an <strong>Evangelical</strong> church, meaning that we take the Bible seriously as the definitive Word of God and that we are called to actively make it's Good News known. We are an <strong>Empowered</strong> church, meaning that it is our desire and intention to cooperate with God's work in the world today as He empowers us with whatever gifts, strengths, and passion is needed to show Himself strong. We are an <strong>Engaged</strong> church, meaning that we deliberately involve ourselves in the lives of fellow believers in the local church; that we seek out opportunities to serve our local community even as we share the news of salvation in Jesus Christ; and that we actively participate and support global ministry efforts.
+    It is our sincere desire that you thoroughly enjoy your hard-earned time away from jobs and stress. We want your stay in our condo to be a relaxing oasis where the demands on your time melt away and are replaced by a renewed sense of wonder and appreication for God's creation. Nestled in the Ozark Mountains, Branson Tablerock Oasis is your home-away-from-home. Come and enjoy the splendor of Tablerock Lake from your expansive balcony or launch your boat from our covered slip. Boating, fishing, tubing, and swimming all await you if that is your desire. Championship golf courses, like the new Paine Stewart Top-of-the-Rock course are nearby. Closer yet is Silver Dollar City, the family friently attraction that helped launch Branson into one of the nation's top vacation destinations.
     </p>
     
+    <h3>Oasis Condo</h3>
+    <p>
+    We invite you to experience our condo as your very own retreat designed for large families, multiples couples, or a renewal time for just you and your spouse. Each of the 3 bedrooms (and 3 bathrooms) are tastefully decorated and updated with the most modern ammenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath, but a walk-out to the balcony.
+    </p>
+    <p>
+    The condo also boasts two separate living areas so that different activities can occur simultaneously. Each living area also has a foldout sofa for sleeping. Thus the condo can hold up to 10 people on beds. The 3 bedrooms and the upstairs living area each have their own 40" 1080p HD flatscreen TV and the main living room has a 40" 1080p HD flatscreen TV. Everybody can be happy.
+    </p>
+    <p>
+    Our condo is located about mid-point on the ridge. If you walk down the slope you will arrive at the water's edge at the boathouse where a slip awaits your boat. If you walk up the slope from the condo, you can swim in the outdoor pool or check out the indoor pool, hot tub, and exercise room. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina.
+    </p>
+    <h3>Location</h3>
+    <p>
+    Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Tablerock Lake. We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Our community not only has lake views, but is on the lake itself.  
+    </p>   
+
 </div>
 
 {% endblock %}
