--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -6,7 +6,7 @@
                     <div class="col-md-4">
                         <a href="index.html"><h4 class="logo-footer"><img style="width: 100px;" src="{{media}}img/logo-small-footer.png"></h4></a>
                         <p>
-                            We see ourselves as only one of Michiana's great churches serving a great God in great cities. Through His people God spreads His message of salvation and love in Jesus Christ to a needy world. We are evangelical and rely on the Holy Spirit's empowering to engage in other's lives both locally and globally.
+                            Facilitating high quality lodging in the Branson area
                         </p>
                     </div>
 
@@ -14,26 +14,38 @@
                         <h4>Activities</h4>
                         
                         <ul class="list-footer">
-                            <li><span class="box-small"><i class="icon-group"></i></span>Sunday AM Schedule
+                            <li><span class="box-small"><i class="icon-group"></i></span>Tablerock Lake
                                 <ul class="list-unstyled">
-                                    <li>Small Groups for All 9:30 AM</li>
-                                    <li>Coffee Break 10:15 AM</li>
-                                    <li>Worship and Teaching 10:30 AM</li>
-                                    <li><em>(Children's Sunday School after singing)</em></li>
+                                    <li>Covered Boat Slip included</li>
+                                    <li>Boating</li>
+                                    <li>Fishing</li>
+                                    <li>Also nearby - Indian Point Marina</li>
                                 </ul>
                             </li>
 
-                            <li><span class="box-small"><i class="icon-group"></i></span>Wednesday PM Schedule
+                            <li><span class="box-small"><i class="icon-group"></i></span>Branson
                                 <ul class="list-unstyled">
-                                    <li>Clothes Pantry <em>(free)</em> 5:30 PM</li>
-                                    <li>Kids' Klub <em>(ages 3 to 5th grade)</em> 6:30 PM</li>
-                                    <li>Youth Group <em>(6th grade on up)</em> 6:30 PM</li>
-                                    <li>Women's Group <em>(includes nursery)</em> 6:30 PM</li>
-                                    <li>Adult Bible Study <em>(coed)</em> 6:30 PM</li>
+                                    <li>Shows</li>
+                                    <li>Restaurants</li>
+                                    <li>Go-Karts, Putt Putt</li>
                                 </ul>
                             </li>
-                            
-                            <li><span class="box-small"><i class="icon-group"></i></span>Many Others as Scheduled
+                        <li><span class="box-small"><i class="icon-group"></i></span>Silver Dollar City
+                                <ul class="list-unstyled">
+                                    <li>Rides</li>
+                                    <li>Music</li>
+                                    <li>Ozark Crafts and Practising Artesans</li>
+                                </ul>
+                            </li>
+                        
+                        <li><span class="box-small"><i class="icon-group"></i></span>Golf
+                                <ul class="list-unstyled">
+                                    <li>Payne Stewart</li>
+                                    <li>etc</li>
+                                </ul>
+                            </li>
+                        
+                            <li><span class="box-small"><i class="icon-group"></i></span>And Much More!
                                 <ul class="list-unstyled">
                                 </ul>
                             </li>
@@ -42,22 +54,22 @@
                     <div class="col-md-4">
                         <h4>Address</h4>
                         <ul class="list-footer">
-                            <li><span class="box-small"><i class="icon-building"></i></span> Faith Community Church</li>
-                            <li>30046 County Road 16 W</li>
-                            <li>Elkhart, IN 46516</li>
-                            <li><em>(former Jimtown North Elementary School)</em></li>
+                            <li><span class="box-small"><i class="icon-building"></i></span>Branson Tablerock Oasis</li>
+                            <li>Treehouse Condos</li>
+                            <li>Branson .... </li>
+                            <li><em>reserve at..... online for our unit</em></li>
                         </ul>
                         
                         <div class="spacer20"></div>
                         <h4>Contact</h4>
                         <ul class="list-footer">
-                            <li><span class="box-small"><i class="icon-book"></i></span> 574.674.8494</li>
+                            <li><span class="box-small"><i class="icon-book"></i></span> 574.707.5177</li>
                         </ul>
                         <ul class="list-footer">
                             <li><span class="box-small"><i class="icon-desktop"></i></span> 
-                                <a href="{{ root }}about/contact.html">Contact Form</a>
+                                <a href="{{ root }}about/contact.........">Contact Form</a>
                             </li>
-                            <li><a href="http://faithcommunitychurchonline.org/">faithcommunitychurchonline.org</a>                              
+                            <li><a href="http://bransontablerockoasis.com/">BransonTablerockOasis.com</a>                              
                             </li>
                         </ul>
                     </div>
@@ -67,20 +79,18 @@
 
         <div class="row after-footer">
             <div class="col-md-8">
-                <p><strong>&copy;2015 Faith Community Church - ALL RIGHTS RESERVED</strong>
+                <p><strong>&copy;2015 BransonTablerockOasis - ALL RIGHTS RESERVED</strong>
                 </p>
             </div>
             <div class="col-md-4">
                 <p>
-                    <a href="https://www.facebook.com/FaithCommunityChurch" target="_blank" class="social-icon-main"><i class="icon-facebook" title="facebook"></i></a>
+                    <a href="https://www.facebook.com/........." target="_blank" class="social-icon-main"><i class="icon-facebook" title="facebook"></i></a>
                     {# <span class="divider-social"></span> #}
-{#                     <a href="https://twitter.com/FCChurchTweets" class="social-icon-main"><i class="icon-twitter" title="twitter"></i></a> #}                   
+{#                     <a href="https://twitter.com/......." class="social-icon-main"><i class="icon-twitter" title="twitter"></i></a> #}                   
                     <span class="divider-social"></span>
-                    <a href="https://www.youtube.com/user/Vinecast" target="_blank" class="social-icon-main"><i class="icon-youtube" title="youtube"></i></a>
+                    <a href="https://www.youtube.com/user/......." target="_blank" class="social-icon-main"><i class="icon-youtube" title="youtube"></i></a>
                     <span class="divider-social"></span>
-                    <a href="http://faithcommunitychurch.podbean.com/" target="_blank" class="social-icon-main"><i class="icon-rss" title="podbean"></i></a>
-                    <span class="divider-social"></span>
-                    <a href="http://faithcommunitychurchonline.blogspot.com/" target="_blank" class="social-icon-main social-text">Blog</a>
+                    <a href="http://......../" target="_blank" class="social-icon-main social-text">Blog</a>
                 </p>
             </div>
         </div>
