--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -10,43 +10,13 @@
                 <ul class="nav navbar-nav">
                     
                     <li><a href="{{ root }}index.html">Home</a></li>
-                    <li>
-                        <a href="{{ root }}about/index.html">About Us</a>
-                        <ul>
-                            <li><a href="{{ root }}about/welcome.html">Welcome</a></li>
-                            <li><a href="{{ root }}about/history.html">History</a></li>
-                            <li><a href="{{ root }}about/beliefs.html">Beliefs</a></li>
-                            <li><a href="{{ root }}about/staff.html">Staff</a></li>
-                            <li><a href="{{ root }}about/calendar.html">Calendar</a></li>
-                            <li><a href="{{ root }}about/contact.html">Contact Us</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="{{ root }}ministries/index.html">Ministries</a>
-                        <ul>
-                            <li><a href="{{ root }}ministries/worship.html">Worship</a></li>
-                            <li><a href="{{ root }}ministries/adults.html">Adults</a></li>
-                            <li><a href="{{ root }}ministries/youth.html">Youth</a></li>
-                            <li><a href="{{ root }}ministries/children.html">Children</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="{{ root }}service/index.html">Community Service</a>
-                        <ul>
-                            <li><a href="{{ root }}service/sos.html">Summer of Service</a></li>
-                            <li><a href="{{ root }}service/clothes-pantry.html">Clothes Pantry</a></li>
-                            <li><a href="{{ root }}service/pay-it-forward.html">Pay It Forward</a></li>
-                            <li><a href="{{ root }}service/community-meal.html">Community Meal</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="{{ root }}global/index.html">Global Focus</a>
-                        <ul>
-                            <li><a href="{{ root }}global/career.html">Career Missions</a></li>
-                            <li><a href="{{ root }}global/trips.html">Mission Trips</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="{{ root }}teaching.html">Teaching</a></li>
+                    <li><a href="{{ root }}photogallery/index.html">Photo Gallery</a></li>
+                    <li><a href="{{ root }}rentalrates/index.html">Rental Rates</a></li>
+                    <li><a href="{{ root }}availability/index.html">Availability</a></li>
+                    <li><a href="{{ root }}thingstodo/index.html">Things to Do</a></li>
+                    <li><a href="{{ root }}rentalagreement/index.html">Rental Agreement</a></li>
+                    <li><a href="{{ root }}aboutus/index.html">About Us</a></li>
+                    <li><a href="{{ root }}contactus/index.html">Contact Us</a></li>
                     
                 </ul>
                 <!-- Menu End -->
