--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -10,13 +10,13 @@
                 <ul class="nav navbar-nav">
                     
                     <li><a href="{{ root }}index.html">Home</a></li>
-                    <li><a href="{{ root }}photogallery/index.html">Photo Gallery</a></li>
-                    <li><a href="{{ root }}rentalrates/index.html">Rental Rates</a></li>
-                    <li><a href="{{ root }}availability/index.html">Availability</a></li>
-                    <li><a href="{{ root }}rentalagreement/index.html">Rental Agreement</a></li>
-                    <li><a href="{{ root }}thingstodo/index.html">Things to Do</a></li>
-                    <li><a href="{{ root }}aboutus/index.html">About Us</a></li>
-                    <li><a href="{{ root }}contactus/index.html">Contact Us</a></li>
+                    <li><a href="{{ root }}photogallery.html">Photo Gallery</a></li>
+                    <li><a href="{{ root }}rentalrates.html">Rental Rates</a></li>
+                    <li><a href="{{ root }}availability.html">Availability</a></li>
+                    <li><a href="{{ root }}rentalagreement.html">Rental Agreement</a></li>
+                    <li><a href="{{ root }}thingstodo.html">Things to Do</a></li>
+                    <li><a href="{{ root }}aboutus.html">About Us</a></li>
+                    <li><a href="{{ root }}contactus.html">Contact Us</a></li>
                     
                 </ul>
                 <!-- Menu End -->
