--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -13,17 +13,19 @@
     <div class="col-md-8">
         <div class="spacer20 visible-xs visible-sm"></div>
         <h2>2015 Rental Rates</h2>
-        <h3>3 bedrooms, 3 baths, 2 living areas, huge TVs, sleeps 10 on beds</h3>
-        <h5>Jan 4th  - Feb 28th, 2 nights minimum stay, $150 per night</h5> 
-        <h5>Mar 1st  - May 14th, 3 nights minimum stay, $225 per night</h5> 
-        <h5>May 15th - Sept 6th, 3 nights minimum stay, $260 per night</h5> 
-        <h5>Sept 7th - Oct 15th, 3 nights minimum stay, $225 per night</h5> 
-        <h5>Oct 16th - Jan 3rd, 3 nights minimum stay, $245 per night</h5> 
-        <p>Plus 6.1% Tax and $110 Cleaning Fee</p>
+        <h3>3 bedrooms, 3 baths, 2 living areas with sofa beds, huge TVs, sleeps 10</h3>
+        <h5>Jan 4th  - Feb 28th, 2 nights minimum stay, $100 per night</h5> 
+        <h5>Mar 1st  - May 21st, 2 nights minimum stay, $130 per night</h5> 
+        <h5>May 22nd - June 26th, 3 nights minimum stay, $210 per night</h5>
+        <h5>June 27th - July 31st, 3 nights minimum stay, $230 per night</h5>
+        <h5>August 1st - August 15th, 3 nights minimum stay, $215 per night</h5>
+        <h5>August 16th - Sept 6th, 2 nights minimum stay, $210 per night</h5>
+        <h5>Sept 7th - Jan 3rd, 2 nights minimum stay, $130 per night</h5> 
+        <p>Plus 6.1% Tax and $75 Cleaning Fee</p>
     </div>
     
     <div class="col-md-4 text-center">
-        <img src="{{ media }}img/history/cliffeleanor.jpg" alt="">
+        <img src="{{ media }}img/rentalrates.jpg" alt="">
     </div>
 </div>
 
