--- a/templates/components/index-slider.html
+++ b/templates/components/index-slider.html
@@ -1,20 +1,9 @@
-<li data-transition="fade" data-slotamount="15" data-masterspeed="300" data-thumb="{{ media }}img/1-big.jpg">
-    <img src="{{ media }}img/revolution-slider/dkgray-big.jpg" data-fullwidthcentering="on" alt="">
 
-    <div class="caption very_large_text lfl" data-x="center" data-y="200" data-speed="400" data-start="600" data-easing="easeOutExpo">Branson</div>
-    
-    <div class="caption very_large_text lfl" data-x="center" data-y="280" data-speed="400" data-start="1500" data-easing="easeOutExpo">Tablerock</div>
-    
-    <div class="caption very_large_text lfl" data-x="center" data-y="360" data-speed="400" data-start="2400" data-easing="easeOutExpo">Oasis</div>
-</li>
 
 <li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/1bto.jpg" data-fullwidthcentering="on">
+    <img src="{{ media }}img/index-slider/1btoview.jpg" data-fullwidthcentering="on">
 </li>
 
-<li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/2bto.jpg" data-fullwidthcentering="on">
-</li>
 
 <li data-transition="fade" data-slotamount="15" data-masterspeed="300" data-thumb="{{ media }}img/1-big.jpg">
     <img src="{{ media }}img/revolution-slider/dkgray-big.jpg" data-fullwidthcentering="on" alt="">
@@ -26,13 +15,17 @@
     <div class="caption very_large_text lfl" data-x="center" data-y="360" data-speed="400" data-start="2400" data-easing="easeOutExpo">Oasis</div>
 </li>
 
-<li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/3bto.jpg" data-fullwidthcentering="on">
-</li>
 
 <li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/4bto.jpg" data-fullwidthcentering="on">
+    <img src="{{ media }}img/index-slider/2btoSDCFireFall.jpg" data-fullwidthcentering="on">
 </li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/3btomasterbed.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/4btoSDCAmericanPlunge.jpg" data-fullwidthcentering="on">
+</li>
+
 
 <li data-transition="fade" data-slotamount="15" data-masterspeed="300" data-thumb="{{ media }}img/1-big.jpg">
     <img src="{{ media }}img/revolution-slider/dkgray-big.jpg" data-fullwidthcentering="on" alt="">
@@ -44,10 +37,57 @@
     <div class="caption very_large_text lfl" data-x="center" data-y="360" data-speed="400" data-start="2400" data-easing="easeOutExpo">Oasis</div>
 </li>
 
-<li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/5bto.jpg" data-fullwidthcentering="on">
-</li>
 
 <li data-transition="fade" data-slotamount="15">
-    <img src="{{ media }}img/index-slider/6bto.jpg" data-fullwidthcentering="on">
+    <img src="{{ media }}img/index-slider/5btoSDSFireInTheHole.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/6btoupbed.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/7btoSDCRaft.jpg" data-fullwidthcentering="on">
+</li>
+
+
+<li data-transition="fade" data-slotamount="15" data-masterspeed="300" data-thumb="{{ media }}img/1-big.jpg">
+    <img src="{{ media }}img/revolution-slider/dkgray-big.jpg" data-fullwidthcentering="on" alt="">
+
+    <div class="caption very_large_text lfl" data-x="center" data-y="200" data-speed="400" data-start="600" data-easing="easeOutExpo">Branson</div>
+    
+    <div class="caption very_large_text lfl" data-x="center" data-y="280" data-speed="400" data-start="1500" data-easing="easeOutExpo">Tablerock</div>
+    
+    <div class="caption very_large_text lfl" data-x="center" data-y="360" data-speed="400" data-start="2400" data-easing="easeOutExpo">Oasis</div>
+</li>
+
+
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/8tboSDCTrain.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/9btoTubing.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/10btoSDCThunderation.jpg" data-fullwidthcentering="on">
+</li>
+
+
+<li data-transition="fade" data-slotamount="15" data-masterspeed="300" data-thumb="{{ media }}img/1-big.jpg">
+    <img src="{{ media }}img/revolution-slider/dkgray-big.jpg" data-fullwidthcentering="on" alt="">
+
+    <div class="caption very_large_text lfl" data-x="center" data-y="200" data-speed="400" data-start="600" data-easing="easeOutExpo">Branson</div>
+    
+    <div class="caption very_large_text lfl" data-x="center" data-y="280" data-speed="400" data-start="1500" data-easing="easeOutExpo">Tablerock</div>
+    
+    <div class="caption very_large_text lfl" data-x="center" data-y="360" data-speed="400" data-start="2400" data-easing="easeOutExpo">Oasis</div>
+</li>
+
+
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/11btoSDCGiantSwing.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/12btoBransonLanding.jpg" data-fullwidthcentering="on">
+</li>
+<li data-transition="fade" data-slotamount="15">
+    <img src="{{ media }}img/index-slider/13btoSDCElectroSpin.jpg" data-fullwidthcentering="on">
 </li>
