--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -32,10 +32,10 @@
     
     <h3>Oasis Condo</h3>
     <p>
-    We invite you to experience our condo as your very own retreat designed for large families, multiples couples, or a renewal time for just you and your spouse. Each of the 3 bedrooms (and 3 bathrooms) are tastefully decorated and updated with the most modern ammenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath, but a walk-out to the balcony.
+    We invite you to experience our condo as your very own retreat designed for large families, multiple couples, or a renewal time for just you and your spouse. Each of the 3 bedrooms (and 3 bathrooms) are tastefully decorated and updated with the most modern ammenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath, but a walk-out to the balcony.
     </p>
     <p>
-    The condo also boasts two separate living areas so that different activities can occur simultaneously. Each living area also has a foldout sofa for sleeping. Thus the condo can hold up to 10 people on beds. The 3 bedrooms and the upstairs living area each have their own 40" 1080p HD flatscreen TV and the main living room has a 40" 1080p HD flatscreen TV. Everybody can be happy.
+    The condo also boasts two separate living areas so that different activities can occur simultaneously. The main floor living area  has a sleeper sofa and boasts a 50" 1080p HD flatscreen TV. The upper floor living area has two sleeper sofas and a 40" 1080p HD flatscreen TV. Also each of the 3 bedrooms have their own 40" 1080p HD flatscreen TVs, so everybody can be happy. Thus the condo can accomodate 12 people on beds, which includes the three traditional beds and the three sleeper sofas.
     </p>
     <p>
     Our condo is located about mid-point on the ridge. If you walk down the slope you will arrive at the water's edge at the boathouse where a slip awaits your boat. If you walk up the slope from the condo, you can swim in the outdoor pool or check out the indoor pool, hot tub, and exercise room. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina.
