--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,11 +44,21 @@
     <p>
     Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Tablerock Lake. We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Our community not only has lake views, but is on the lake itself.  
     </p>
-    
-    <img src="{{media}}
-    img/bookNowOnVRBO.jpg"
-        a href="http://www.vrbo.com/686045/">
+   
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="our-team">
+                <div class="our-team-image">
+                    <a href="http://www.vrbo.com/686045/" class="zoom popup-link">
+                     <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+                    </a>
+                </div>
+            <div class="our-team-text">
+        </div>
+    </div>
+       
+        
 </div>
 
 {% endblock %}
