--- a/templates/pages/rentalagreement.html
+++ b/templates/pages/rentalagreement.html
@@ -8,12 +8,12 @@
 
 {% block content %}
 
-    <h2>Remtal Agreement</h2>
+    <h3>Rental Agreement</h3>
         <strong><u><a href="{{ media }}pdfs/Branson_Rental_Agreement.pdf">Rental Agreeement</a></u></strong>
 
     <hr>
         
-    <h2>Maps</h2>
+    <h3>Maps</h3>
         <strong><u><a href="{{ media }}pdfs/directions.pdf">Directions to Branson Tablerock Oasis - Treehouse Condos</a></u></strong>        
         <br><strong><u><a href="{{ media }}img/map-indian-point.jpg">Map of Indian Point</a></u></strong>
         <br><strong><u><a href="{{ media }}img/map-treehouse-condos.png">Map of Treehouse Condos</a></u></strong>
