--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -47,14 +47,14 @@
    
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4 col-md-offset-4">
             <div class="our-team">
                 <div class="our-team-image">
                     <a href="http://www.vrbo.com/686045/" class="zoom popup-link">
                      <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
                     </a>
                 </div>
-            <div class="our-team-text">
+            <div class="our-team-text"></div>
         </div>
     </div>
        
