--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -46,16 +46,10 @@
     </p>
    
 
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="our-team">
-                <div class="our-team-image">
-                    <a href="http://www.vrbo.com/686045/" class="zoom popup-link">
-                     <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-                    </a>
-                </div>
-            <div class="our-team-text"></div>
-        </div>
+    <div class="text-center">
+        <a href="http://www.vrbo.com/686045/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        </a>
     </div>
        
         
