--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -85,12 +85,12 @@
             <div class="col-md-4">
                 <p>
                     <a href="https://www.facebook.com/bransontablerockoasis" target="_blank" class="social-icon-main"><i class="icon-facebook" title="facebook"></i></a>
-                    {# <span class="divider-social"></span> #}
-{#                     <a href="https://twitter.com/......." class="social-icon-main"><i class="icon-twitter" title="twitter"></i></a> #}                   
-                    <span class="divider-social"></span>
-                    <a href="https://www.youtube.com/user/......." target="_blank" class="social-icon-main"><i class="icon-youtube" title="youtube"></i></a>
-                    <span class="divider-social"></span>
-                    <a href="http://......../" target="_blank" class="social-icon-main social-text">Blog</a>
+
+                        <span class="divider-social"></span>
+                    
+                    <a href="http://www.vrbo.com/686045/" class="social-icon-main">
+                        <img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></a>
+
                 </p>
             </div>
         </div>
