--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -41,7 +41,8 @@
                         <li><span class="box-small"><i class="icon-group"></i></span>Golf
                                 <ul class="list-unstyled">
                                     <li>Payne Stewart</li>
-                                    <li>etc</li>
+                                    <li>Top of the Rock</li>
+                                    <li>and others</li>
                                 </ul>
                             </li>
                         
@@ -56,8 +57,8 @@
                         <ul class="list-footer">
                             <li><span class="box-small"><i class="icon-building"></i></span>Branson Tablerock Oasis</li>
                             <li>Treehouse Condos</li>
-                            <li>Branson .... </li>
-                            <li><em>reserve at..... online for our unit</em></li>
+                            <li>Indian Point</li>
+                            <li><em>Exact location disclosed after booking</em></li>
                         </ul>
                         
                         <div class="spacer20"></div>
