--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -9,6 +9,123 @@
 
 {% block content %}
 
+    <div class="row">
+      <div class="col-md-12">
+        <ul id="portfolio-filter">
+          <li class="act"><a href="#" class="filter" data-filter="*">All</a></li>
+        	<li><a href="#" class="filter" data-filter=".photography">Main Level</a></li>
+          <li><a href="#" class="filter" data-filter=".architecture">Second Level</a></li>
+        	<li><a href="#" class="filter" data-filter=".webdesign">Exterior</a></li>
+          <li><a href="#" class="filter" data-filter=".technology">Attractions</a></li>
+          <li><a href="#" class="filter" data-filter=".identity">Vacations</a></li>
+        </ul>
+        		
+        <section id="portfolio-items">
+          <ul class="portfolio">
+            <li>
+              <!-- Portfolio Item -->
+              <article class="col-md-3 project" data-tags="photography,technology">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <img src="img/portfolio/1.jpg" alt="sdf">
+                    <span class="divider"></span>
+                    <a href="img/portfolio/1.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
+                  </div>
+                  <div class="project-text">
+                    <h5><a href="#">Project name</a></h5>
+                      gfd
+                  </div>              
+                </div>
+              </article>
+              <!-- Portfolio Item End -->
+            </li> 
+                
+            <li>
+              <!-- Portfolio Item -->
+              <article class="col-md-3 project" data-tags="webdesign,identity">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <img src="img/portfolio/2.jpg" alt="sdf">
+                    <span class="divider"></span>
+                    <a href="img/portfolio/2.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
+                  </div>
+                  <div class="project-text">
+                    <h5><a href="#">Project name</a></h5>
+                      fgd
+                  </div>              
+                </div>
+              </article>
+              <!-- Portfolio Item End -->
+            </li>  
+
+            <li>
+              <!-- Portfolio Item -->
+              <article class="col-md-3 project" data-tags="webdesign,identity">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <img src="img/portfolio/2.jpg" alt="sdf">
+                    <span class="divider"></span>
+                    <a href="img/portfolio/2.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
+                  </div>
+                  <div class="project-text">
+                    <h5><a href="#">Project name</a></h5>
+                      fgd
+                  </div>              
+                </div>
+              </article>
+              <!-- Portfolio Item End -->
+            </li> 
+            
+            <li>
+              <!-- Portfolio Item -->
+              <article class="col-md-3 project" data-tags="webdesign,identity">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <img src="img/portfolio/2.jpg" alt="sdf">
+                    <span class="divider"></span>
+                    <a href="img/portfolio/2.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
+                  </div>
+                  <div class="project-text">
+                    <h5><a href="#">Project name</a></h5>
+                      fgd
+                  </div>              
+                </div>
+              </article>
+              <!-- Portfolio Item End -->
+            </li> 
+            
+            <li>
+              <!-- Portfolio Item -->
+              <article class="col-md-3 project" data-tags="webdesign,identity">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <img src="img/portfolio/2.jpg" alt="sdf">
+                    <span class="divider"></span>
+                    <a href="img/portfolio/2.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
+                  </div>
+                  <div class="project-text">
+                    <h5><a href="#">Project name</a></h5>
+                      fgd
+                  </div>              
+                </div>
+              </article>
+              <!-- Portfolio Item End -->
+            </li> 
+          
+          </ul> 
+        </section> <!-- isotope section end -->
+      </div> <!-- col-md-12 end -->
+    </div> <!-- row end -->
+
+
+
+
+
 
 
 {% endblock %}
