--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -3,9 +3,12 @@
         <div class="navbar-inner">
             <div class="container">
                 <!-- logo with back to top -->
-                <a href="{{ root }}index.html" title="Home" class="back-to-top">
-                    <img src="{{ media }}img/logo-small-header.png " alt="logo" class="logo">
+
+                
+                <a href="index.html" title="Home" class="back-to-top">
+                    <img src="{{media}}img/logo-small-header.png " alt="logo" class="logo">
                 </a>
+
                 <!-- Menu -->
                 <ul class="nav navbar-nav">
                     
