--- a/templates/pages/aboutus.html
+++ b/templates/pages/aboutus.html
@@ -1,27 +1,27 @@
 {% extends "base/subpage.html" %}
 
-{% block subheading %}Welcome{% endblock %}
+{% block subheading %}About Us{% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{{ root }}index.html">Home</a></li>
-    <li><a href="{{ root }}about/index.html">About Us</a></li>
-    <li class="active">Welcome</li>
+    <li><a href="{{ root }}aboutus.html">About Us</a></li>
+
 {% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/6gC7V2O7FB4" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
     
-    <div class="spacer20"></div>
     
     <div class="row">
         <div class="col-md-8">
             <p>
-            Thanks for visiting our website and we hope it will help you as you seek out a local church family. Please note that there are several sub-pages under the major tabs. Of course the best way to check out a church is do come by for a visit. God will be faithful to direct His children to a good church where they can grow and serve. -Pastor Randy &amp; Tammy for the FCC family
+<strong>About the Owners:</strong> Tammy and I (Randy) have enjoyed traveling to Branson for decades and now we have a permanent place to entertain family and guests. My wife is an English as a Second Language teacher in a local public school system and I pastor a church. We are both musicians and participate on the worship team. Prior to our current jobs, we lived in the Central American country of Costa Rica where we worked with youth and volunteer teams.
             </p>
+            <p>
+<strong>Why We Chose Branson:</strong> When we were looking for a place to buy in Branson we thought about the things that are important to us and that would be attractive to other guests. For us that meant centering our search around Tablerock Lake and near Silver Dollar City (we have been going there since we were dating as teenagers). The condo we purchased has spectacular lake views; the ability to walk down to the water's edge; a covered boat slip (no messing around taking the boat in and out every day on vacation). The last thing we decided was to go with something big enough to accommodate our entire family (we have two adult married children and a grandson), so we went with the largest number of true bedrooms the condos offered, which was 3. Obviously Tammy and I can come stay in the master bedroom with its view of the lake by ourselves as well, which is what we hope honeymooners will consider.
+            </p>
+            <p>
+<strong>The Unique Benefits of this Condo:</strong> We have stayed in a variety of places in the Branson area. The last place we stayed was cheap, but it was in a basement with no view except the hallway and we were very dissatisfied. Over the years our favorite places had balconies where you could look out over Tablerock Lake. Now, with our own condo, we actually have about twice the balcony space of any place we have ever stayed. What a wonderful way to greet the day - coffee in one hand and the Bible in the other.
+            </p>
+            
         </div>
         <div class="col-md-4 text-center">
             <img src="{{ media }}img/randytammywelcome.jpg" alt="">
