--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -6,7 +6,7 @@
                     <div class="col-md-4">
                         <a href="index.html"><h4 class="logo-footer"><img style="width: 100px;" src="{{media}}img/logo-small-footer.png"></h4></a>
                         <p>
-                            Facilitating high quality lodging in the Branson area
+                            <em>delivering exceptional nightly condo rental experiences</em>
                         </p>
                     </div>
 
