--- a/templates/pages/availability.html
+++ b/templates/pages/availability.html
@@ -9,6 +9,13 @@
 
 {% block content %}
 
+
+    <div class="row">
+        <div class="col-md-12">
+            <p>The very best way to check on the availability of your desired date range is to navigate to our <strong>VRBO</strong> Vacation Rental By Owner website and simply plug in your dates. That calendar is totally up to date.</p>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="our-team">
