--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -17,6 +17,7 @@
                     <li><a href="{{ root }}rentalrates.html">Rental Rates</a></li>
                     <li><a href="{{ root }}availability.html">Availability</a></li>
                     <li><a href="{{ root }}rentalagreement.html">Rental Agreement</a></li>
+                    <li><a href="{{ root }}maps.html">Maps</a></li>
                     <li><a href="{{ root }}thingstodo.html">Things to Do</a></li>
                     <li><a href="{{ root }}aboutus.html">About Us</a></li>
                     <li><a href="{{ root }}contactus.html">Contact Us</a></li>
