--- a/templates/pages/rentalagreement.html
+++ b/templates/pages/rentalagreement.html
@@ -1,23 +1,15 @@
-{% extends "base/site-base.html" %}
+{% extends "base/subpage.html" %}
 
-{% block subheading %}Rental Agreement and Maps{% endblock %}
+{% block subheading %}Rental Agreement{% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{{ root }}rentalagreement.html">Rental Agreement and Maps</a></li>
+    <li><a href="{{ root }}rentalagreement.html">Rental Agreement</a></li>
 {% endblock %}
 
 {% block content %}
 
-    <h3>Rental Agreement</h3>
-        <strong><u><a href="{{ media }}pdfs/Branson_Rental_Agreement.pdf">Rental Agreeement</a></u></strong>
 
-    <hr>
-        
-    <h3>Maps</h3>
-        <strong><u><a href="{{ media }}pdfs/directions.pdf">Directions to Branson Tablerock Oasis - Treehouse Condos</a></u></strong>        
-        <br><strong><u><a href="{{ media }}img/map-indian-point.jpg">Map of Indian Point</a></u></strong>
-        <br><strong><u><a href="{{ media }}img/map-treehouse-condos.png">Map of Treehouse Condos</a></u></strong>
-        <br><strong><u><a href="{{ media }}img/map-branson-attractions.jpg">Map of Branson Area Attractions</a></u></strong>           
-
+    <h3>Click the link to view the rental agreement</h3>
+                <strong><u><a href="{{ media }}pdfs/Branson_Rental_Agreement.pdf">Rental Agreeement</a></u></strong>
 
 {% endblock %}
