--- a/templates/pages/availability.html
+++ b/templates/pages/availability.html
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <p>The very best way to check on the availability of your desired date range is to navigate to our <strong>VRBO</strong> Vacation Rental By Owner website and simply plug in your dates. That calendar is totally up to date.</p>
+            <p>The very best way to check on the availability of your desired date range is to navigate to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. That calendar is totally up to date.</p>
         </div>
     </div>
 
@@ -20,7 +20,7 @@
         <div class="col-md-12">
             <div class="our-team">
                 <div class="our-team-image">
-                    <a href="http://www.vrbo.com/686045/" class="zoom popup-link">
+                    <a href="http://www.vrbo.com/686045/" class="social-icon-main">
                      <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
                     </a>
                 </div>
@@ -29,3 +29,12 @@
     </div>
 
 {% endblock %}
+
+
+                 
+
+
+                   <!-- 
+                  <a href="http://www.vrbo.com/686045/" class="zoom popup-link">
+                     <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+                     -->
