--- a/templates/pages/contactus.html
+++ b/templates/pages/contactus.html
@@ -14,11 +14,17 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25609.72554956809!2d-93.33768883383782!3d36.64526132063986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87cf1ea973fcff43%3A0x962b51c560b834e3!2sTreehouse+Ln%2C+Branson%2C+MO+65616!5e0!3m2!1sen!2sus!4v1426536241356" width="600" height="450" frameborder="0" style="border:0"></iframe>
         
 
+        <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="http://form.jotform.us/form/50776438490161" frameborder="0" style="width:100%; height:732px; border:none;" scrolling="no"></iframe>
+<script type="text/javascript">window.handleIFrameMessage = function(e) {var args = e.data.split(":");var iframe = document.getElementById("JotFormIFrame");if (!iframe)return;switch (args[0]) {case "scrollIntoView":iframe.scrollIntoView();break;case "setHeight":iframe.style.height = args[1] + "px";break;case "collapseErrorPage":if (iframe.clientHeight > window.innerHeight) {iframe.style.height = window.innerHeight + "px";}break;case "reloadPage":window.location.reload();break;}};if (window.addEventListener) {window.addEventListener("message", handleIFrameMessage, false);} else if (window.attachEvent) {window.attachEvent("onmessage", handleIFrameMessage);}</script>
+        
+       <!-- 
         <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="http://form.jotform.us/form/50746284781160" frameborder="0" style="width:100%; height:800px; border:none;" scrolling="yes"></iframe>
+        -->
         
     </div>
 </div>
 
 {% endblock %}
+
 
 
