--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -21,7 +21,9 @@
         <h5>August 1st - August 15th, 3 nights minimum stay, $215 per night</h5>
         <h5>August 16th - Sept 6th, 2 nights minimum stay, $210 per night</h5>
         <h5>Sept 7th - Jan 3rd, 2 nights minimum stay, $130 per night</h5> 
-        <p>Plus 11.6% Tax and $75 Cleaning Fee</p>
+        <p>Plus 11.6% Tax and $75 Cleaning Fee for the stay</p>
+        <p><em>Rates are based on 6 guests. Additional guests are $10 per person per night</em></p>
+        
     </div>
     
     <div class="col-md-4 text-center">
