--- a/templates/pages/rentalagreement.html
+++ b/templates/pages/rentalagreement.html
@@ -12,4 +12,12 @@
     <h3>Click the link to view the rental agreement</h3>
                 <strong><u><a href="{{ media }}pdfs/Branson_Rental_Agreement.pdf">Rental Agreeement</a></u></strong>
 
+
+
+<div class="text-center">
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+    </a>
+</div>
+
 {% endblock %}
