--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -31,5 +31,10 @@
     </div>
 </div>
 
+<div class="text-center">
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+    </a>
+</div>
 
 {% endblock %}
