--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -14,7 +14,7 @@
                         <h4>Activities</h4>
                         
                         <ul class="list-footer">
-                            <li><span class="box-small"><i class="icon-group"></i></span>Tablerock Lake
+                            <li><span class="box-small"><i class="icon-group"></i></span>Table Rock Lake
                                 <ul class="list-unstyled">
                                     <li>Covered Boat Slip included</li>
                                     <li>Boating</li>
@@ -56,23 +56,42 @@
                         <h4>Address</h4>
                         <ul class="list-footer">
                             <li><span class="box-small"><i class="icon-building"></i></span>Branson Tablerock Oasis</li>
+                            <li>Branson, Missouri</li>
                             <li>Treehouse Condos</li>
                             <li>Indian Point</li>
                             <li><em>Exact location disclosed after booking</em></li>
                         </ul>
                         
                         <div class="spacer20"></div>
+                        
                         <h4>Contact</h4>
+                        
                         <ul class="list-footer">
                             <li><span class="box-small"><i class="icon-book"></i></span> 574.707.5177</li>
                         </ul>
+                        
                         <ul class="list-footer">
-                            <li><span class="box-small"><i class="icon-desktop"></i></span> 
-                                <a href="{{ root }}about/contact.........">Contact Form</a>
-                            </li>
-                            <li><a href="http://bransontablerockoasis.com/">BransonTablerockOasis.com</a>                              
+                            <li><span class="box-small"><i class="social-icon-main"</i><img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></span>
+                                <a href="http://www.vrbo.com/686045/">Reserve Your Stay</a>
                             </li>
                         </ul>
+                        
+                        <ul class="list-footer">
+                            <li><span class="box-small"><i class="icon-desktop"></i></span> 
+                                <a href="{{ root }}contactus.html">Contact Form</a>
+                            </li> 
+                        </ul>
+  
+                     
+                        <ul class="list-footer">
+                            <li><span class="box-small"><i class="icon-facebook" title="facebook"></i></span>
+                                <a href="https://www.facebook.com/bransontablerockoasis" target="_blank">Like Us on Facebook</a>
+                            </li>
+                        </ul
+
+                     
+                     
+                        
                     </div>
                 </div>
             </div>
