--- a/templates/pages/aboutus.html
+++ b/templates/pages/aboutus.html
@@ -27,4 +27,11 @@
             <img src="{{ media }}img/randytammywelcome.jpg" alt="">
         </div>
     </div>
+    
+<div class="text-center">
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+    </a>
+</div>
+
 {% endblock %}
