--- a/templates/pages/contactus.html
+++ b/templates/pages/contactus.html
@@ -9,6 +9,19 @@
 
 {% block content %}
 
+
+<div class="row">
+    <div class="col-md-12">
+        <p>The very best way to check on the availability of your desired date range is to click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. That calendar is totally up to date.</p>
+    </div>
+</div>
+
+<div class="text-center">
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+    </a>
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25609.72554956809!2d-93.33768883383782!3d36.64526132063986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87cf1ea973fcff43%3A0x962b51c560b834e3!2sTreehouse+Ln%2C+Branson%2C+MO+65616!5e0!3m2!1sen!2sus!4v1426536241356" width="600" height="450" frameborder="0" style="border:0"></iframe>
