--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -124,6 +124,12 @@
 
 
 
+<div class="text-center">
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+    </a>
+</div>
+
 
 
 
