--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,11 +44,14 @@
     <p>
     Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Tablerock Lake. We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Our community not only has lake views, but is on the lake itself.  
     </p>
-   
 
+    
     <div class="text-center">
         <a href="http://www.vrbo.com/686045/">
             <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        </a>
+        
+        <a href="http://www.wunderground.com/cgi-bin/findweather/hdfForecast?query=65616&bannertypeclick=golfv2" target="_blank"><img src='http://weathersticker.wunderground.com/cgi-bin/banner/ban/wxBanner?zip=65616&bannertype=golfv2_cond&course=Branson'  border='0' alt='Click for forecast!' />
         </a>
     </div>
        
