--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -38,7 +38,7 @@
     The condo also has two separate living areas so that different activities can occur simultaneously. The main floor living area has a sleeper sofa and boasts a 50" 1080p HD flatscreen TV. The upper floor living area has a sleeper sofa and a 40" 1080p HD flatscreen TV. Also each of the 3 bedrooms have their own 40" 1080p HD flatscreen TVs, so everybody can be happy. Thus the condo can accomodate 10 people on beds, which includes the three traditional beds and the two sleeper sofas.
     </p>
     <p>
-    Our condo is located about mid-point on the ridge. If you walk down the slope you will arrive at the water's edge at the boathouse where a slip awaits your boat. If you walk up the slope from the condo, you can swim in the outdoor pool or check out the indoor pool, hot tub, and exercise room. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina.
+    Our condo is located about mid-point on the ridge. If you walk down the slope you will arrive at the water's edge by the boathouse where a slip awaits your boat. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina. If you walk up the slope from the condo, you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend. Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. 
     </p>
     <h3>Location</h3>
     <p>
