portfolio photos exterior

--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -27,9 +27,9 @@
               <article class="col-md-3 project" data-tags="photography,technology">
                 <div class="project-item-isotope">
                   <div class="project-image">
-                    <img src="img/portfolio/1.jpg" alt="sdf">
+                    <img src="{{ media }}img/portfolio/balconymorning.jpg" alt="sdf">
                     <span class="divider"></span>
-                    <a href="img/portfolio/1.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
+                    <a href="{{ media }}img/portfolio/balconymorning.jpg" class="media-link-1 popup-link" title="some text">SHOW</a>
                     <a class="media-link-2" href="portfolio-detail.html">DETAIL</a>                            
                   </div>
                   <div class="project-text">
